@@ -131,7 +131,7 @@
 		extract( $row2, EXTR_PREFIX_ALL, "u" );
 
 		# alternate row colors
-		$t_bgcolor = alternate_colors( $i, $g_primary_color1, $g_primary_color2 );
+		$t_bgcolor = alternate_colors( $i );
 ?>
 <tr bgcolor="<? echo $t_bgcolor ?>">
 	<td>
@@ -199,7 +199,7 @@
 		extract( $row2, EXTR_PREFIX_ALL, "u" );
 
 		# alternate row colors
-		$t_bgcolor = alternate_colors( $i, $g_primary_color1, $g_primary_color2 );
+		$t_bgcolor = alternate_colors( $i );
 ?>
 <tr bgcolor="<? echo $t_bgcolor ?>">
 	<td>
