@@ -16,6 +16,7 @@ Mantis
  * Modified html functions to consolidate code.
  * Modified confirm messages to consolidate localization strings.
  * Modified comments to use one # instead of ### (save space)
+ * Modified alternate_colors() to have default parameters.
  * Added view by page feature.
  * Added edit new link in news update page.
  * Added file upload into database.
